[package]
name = "sonyflake"
version = "0.2.0"
authors = ["bitcapybara yuxing.bitcapybara@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A distributed unique ID generator inspired by Twitter's Snowflake"
repository = "https://github.com/bitcapybara/sonyflake-rs"
readme = "README.md"
keywords = ["sonyflake", "snowflake", "random", "id", "generator"]
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
parking_lot = "0.12.1"

[dev-dependencies]
bencher = "0.1"

[[bench]]
name = "bench"
harness = false
